--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=25565
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mariadb://${MARIADB_HOST:localhost}:3306/identiDAT
+spring.datasource.username=root
+spring.datasource.password=perico
