Implemented session handling and development mode

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 HELP.md
 target/
+logs/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-application.yml
+application*.yml
 
 ### STS ###
 .apt_generated
