--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
 	</dependencies>
 
 	<build>
+		<!--<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>*.yml</exclude>
+				</excludes>
+			</resource>
+		</resources>-->
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
