--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.googlecode.libphonenumber</groupId>
+			<artifactId>libphonenumber</artifactId>
+			<version>8.10.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
