--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ logs/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-application*.yml
+src/main/resources/application-dev.yml
+src/main/resources/application-prod.yml
 
 ### STS ###
 .apt_generated
